# Amazons

./: .gitignore  .travis.yml  AmazonSimpleSample.cpp  Amazons.docx  CMakeLists.txt  Doxyfile  README.md  algorithm.md  amazons.cpp  amazons.h  backup.amz  bot.cpp  bot.h  chessboard.cpp  chessboard.h  human.cpp  human.h  iplayer.h  kksk_R_1917+.cpp  main.cpp  notes.md  ui.cpp  ui.h  versionlog.md
src/: amazons.cpp  amazons.h  bot.cpp  bot.h  chessboard.cpp  chessboard.h  human.cpp  human.h  iplayer.h  main.cpp  ui.cpp  ui.h
